<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgTony"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:src="@drawable/tony_stark_new" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/imgTony"
        android:text="@string/tony_stark"
        android:textColor="#0d47a1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="13dp"
        android:layout_toRightOf="@+id/imgTony"
        android:text="@string/tonystark_starkindustries_in"
        android:textColor="#fb6f00"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="13dp"
        android:layout_toRightOf="@+id/imgTony"
        android:text="+91 7736475692"
        android:textColor="#ff5966"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgTony"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#3F51B5"
        android:text="@string/more_information"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exitID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="#F30505"
        android:backgroundTint="#F30505"
        android:text="@string/exit"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>